--- a/src/app/components/resource-no-image/resource-no-image.component.scss
+++ b/src/app/components/resource-no-image/resource-no-image.component.scss
@@ -1,8 +1,6 @@
 .no-image-text {    
     padding: 15px;
     border-radius: 5px;
-    background-color: gray;
-    color: white;
     display: grid;
     place-items: center;
     margin-bottom: 15px;
@@ -32,4 +30,30 @@
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     grid-gap: 15px;
     font-size: 12px;
+
+    .control {
+        .input-container {
+            margin-top: 8px;
+            display: block;
+
+            input {
+                border: none;
+                border-radius: 5px;
+                width: 100%;
+                color: transparent;
+            }
+        }
+    }
+}
+
+.preset {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-gap: 15px;
+
+    .preview {
+        text-align: center;
+        font-weight: bold;
+        font-size: 16px;
+    }
 }
