working on no image component

--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -32,6 +32,17 @@
     </div>
   </a>
 
+  <a (click)="openResource()" target="_blank" *ngIf="noImage">
+    <app-resource-no-image
+      [data]="{
+        title: title,
+        backgroundColor: backgroundColor,
+        textColor: textColor
+      }"
+      [mode]="'view'"
+    ></app-resource-no-image>
+  </a>
+
   <!-- * Title -->
   <div
     class="title"
