--- a/src/app/components/resource-no-image/resource-no-image.component.scss
+++ b/src/app/components/resource-no-image/resource-no-image.component.scss
@@ -16,11 +16,11 @@
         }
     
         p:nth-of-type(1) {
-            font-size: 5.0rem;
+            font-size: 4rem;
         }
     
         p:nth-of-type(2) {
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
     }
 }
@@ -30,6 +30,7 @@
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     grid-gap: 15px;
     font-size: 12px;
+    margin-bottom: 15px;
 
     .control {
         .input-container {
