--- a/src/app/general/resource/resource.component.scss
+++ b/src/app/general/resource/resource.component.scss
@@ -91,6 +91,33 @@
   }
 }
 
+.no-image-text {    
+  padding: 15px;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
+  margin-bottom: 15px;
+  min-height: 150px;
+  max-width: 600px;
+  max-height: 400px;
+
+  .text-container {
+      p {
+          font-family: 'Bree Serif', serif;
+          margin: 0;
+          text-align: center;
+      }
+  
+      p:nth-of-type(1) {
+          font-size: 2rem;
+      }
+  
+      p:nth-of-type(2) {
+          font-size: 1rem;
+      }
+  }
+}
+
 @keyframes fadeUp {
   0% {
     opacity: 0;
