--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -84,7 +84,7 @@ mat-form-field {
 
   .divider {
     width: 2px;
-    background-color: #DEE8FF;
+    background-color: #dee8ff;
   }
 
   .right {
@@ -92,6 +92,33 @@ mat-form-field {
     img {
       display: block;
       width: 100%;
+    }
+
+    .no-image-text {
+      padding: 15px;
+      border-radius: 5px;
+      display: grid;
+      place-items: center;
+      margin-bottom: 15px;
+      min-height: 200px;
+      max-width: 600px;
+      max-height: 200px;
+
+      .text-container {
+        p {
+          font-family: "Bree Serif", serif;
+          margin: 0;
+          text-align: center;
+        }
+
+        p:nth-of-type(1) {
+          font-size: 2rem;
+        }
+
+        p:nth-of-type(2) {
+          font-size: 1rem;
+        }
+      }
     }
 
     h4 {
@@ -126,7 +153,7 @@ mat-form-field {
   }
 }
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
   .columns {
     grid-template-columns: 1fr 2px 1fr;
   }
