--- a/src/app/general/dialogs/atc/mini-collection/mini-collection.component.html
+++ b/src/app/general/dialogs/atc/mini-collection/mini-collection.component.html
@@ -7,9 +7,23 @@
   }"
 >
   <div
+    *ngIf="!data.resource1.noImage"
     class="image"
     [ngStyle]="{
       'background-image': 'url(' + image + ')'
+    }"
+  >
+    <div class="placeholder" *ngIf="showPlaceholder">
+      <span>{{ placeholderText }}</span>
+    </div>
+  </div>
+
+  <div
+    *ngIf="data.resource1.noImage"
+    class="no-image"
+    [ngStyle]="{
+      'background-color': data.resource1.backgroundColor,
+      'color': data.resource1.textColor
     }"
   >
     <div class="placeholder" *ngIf="showPlaceholder">
