--- a/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
+++ b/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
@@ -12,6 +12,14 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    display: grid;
+    place-items: center;
+
+    p {
+      font-family: 'Bree Serif', serif;
+      margin: 0;
+      font-size: 2rem;
+    }
   }
 
   .delete-button {
