--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -278,6 +278,13 @@ app-root {
   }
 }
 
+.general-divider {
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, .1);
+  margin: 15px 0;
+}
+
 @media (min-width: 768px) {
   .section-container {
     .section {
