added ability to search resources and collections

--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -19,7 +19,7 @@
 
 <div
   class="see-more"
-  *ngIf="!isLoading && resources.length < resourcesCount"
+  *ngIf="!isLoading && resources.length < resourcesCount && !resourceSearchQuery"
   (click)="loadMorePosts()"
 >
   See More
