--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <!-- Filter -->
-      <div class="control filter" #origin *ngIf="form.get('posts').value">
+      <!-- <div class="control filter" #origin *ngIf="form.get('posts').value">
         <div class="control-icon">
           <fa-icon [icon]="faFilter"></fa-icon>
         </div>
@@ -39,7 +39,7 @@
           formControlName="filter"
           (focus)="showFilterOptions(origin)"
         />
-      </div>
+      </div> -->
 
       <!-- Toggle Content Type -->
       <div class="control-group content">
