--- a/src/app/pages/manage/manage.component.scss
+++ b/src/app/pages/manage/manage.component.scss
@@ -74,6 +74,7 @@
 
         .group {
           display: inline-block;
+          vertical-align: sub;
           cursor: pointer;
 
           fa-icon {
