--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -30,10 +30,10 @@
           <div
             class="item-a"
             [ngStyle]="{
-              'background-image': 'url(' + getImageLink(user) + ')'
+              'background-image': 'url(' + user.image + ')'
             }"
           ></div>
-          <p class="item-b">{{ user.name ? user.name : "No Name" }}</p>
+          <p class="item-b">{{ user.firstName }} {{ user.lastName }}</p>
           <small class="item-c"
             >@{{ user.username ? user.username : "..." }}</small
           >
@@ -55,15 +55,32 @@
       >
         <div class="item" *ngIf="i < 3">
           <div
+            *ngIf="!resource.noImage"
             class="item-a"
-            [ngStyle]="{ 'background-image': 'url(' + resource.smImage.link + ')' }"
+            [ngStyle]="{
+              'background-image': 'url(' + resource.smImage.link + ')'
+            }"
           ></div>
+          <div
+            *ngIf="resource.noImage"
+            class="item-a"
+            [ngStyle]="{
+              'background-color': resource.backgroundColor,
+              color: resource.textColor
+            }"
+          >
+            <p>{{ resource.title[0] }} </p>
+          </div>
           <p class="item-b">{{ resource.title | truncate: [30] }}</p>
           <small class="item-c">@{{ resource.username }}</small>
         </div>
       </div>
 
-      <div class="see-more" *ngIf="resources.length > 3" (mousedown)="goToSearch()">
+      <div
+        class="see-more"
+        *ngIf="resources.length > 3"
+        (mousedown)="goToSearch()"
+      >
         <span>See More</span>
         <span>{{ resources.length }}</span>
       </div>
@@ -87,7 +104,11 @@
         </div>
       </div>
 
-      <div class="see-more" *ngIf="collections.length > 3" (mousedown)="goToSearch()">
+      <div
+        class="see-more"
+        *ngIf="collections.length > 3"
+        (mousedown)="goToSearch()"
+      >
         <span>See More</span>
         <span>{{ collections.length }}</span>
       </div>
