--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,9 +1,6 @@
 <div class="user-box" (click)="goToUser(data.username)">
   <div class="image-container">
-    <div
-      [ngStyle]="{ 'background-image': 'url(' + parseImageLink(data) + ')' }"
-      class="image"
-    ></div>
+    <app-user-image [userData]="data" [clickable]="false" size="md"></app-user-image>
   </div>
   <div class="details">
     <h4 *ngIf="data.name">{{ data.name }}</h4>
