--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -15,16 +15,8 @@
 
 	.image-container {
 		padding-top: 15px;
-		.image {
-			background-color: grey;
-			background-size: cover;
-			background-position: center center;
-			border-radius: 50%;
-			width: 75px;
-			height: 75px;
-			margin-left: auto;
-			margin-right: auto;
-		}
+		display: grid;
+		place-items: center;
 	}
 
 	.details {
