minor fix to search

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Resources result -->
-    <div class="section" *ngIf="resources.length > 0">
+    <div class="section" *ngIf="resources">
       <h3>Resources</h3>
       <div
         *ngFor="let resource of resources; let i = index"
