--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar mode="query" *ngIf="isLoading"></mat-progress-bar>
-<form [formGroup]="shareResourceForm" (ngSubmit)="submitShareResourceForm()">
+<form [formGroup]="shareResourceForm">
   <div class="section-container">
     <div class="section">
       <div class="section-header">
