--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -140,7 +140,7 @@
 
   <app-comment
     *ngIf="showComments"
-    [data]="{ resourceId: id, comments: comments, count: commentCount }"
+    [data]="{ resourceId: id, count: commentCount }"
   ></app-comment>
 
   <!-- * Add Comment -->
