--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -135,15 +135,21 @@
     padding: 15px;
 
     .list-of-interests {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 5px;
+      // display: grid;
+      // grid-template-columns: repeat(4, 1fr);
+      // grid-gap: 5px;
       p {
+        display: inline-block;
         background-color: #dce6fd;
         color: #481a89;
         padding: 5px 15px;
         border-radius: 15px;
         text-align: center;
+        margin-bottom: 0;
+
+        &:not(:last-of-type) {
+          margin-right: 5px;
+        }
       }
     }
   }
