updated collection component

--- a/src/app/components/collection/collection.component.html
+++ b/src/app/components/collection/collection.component.html
@@ -44,8 +44,7 @@
           class="text-container-block"
           [style.color]="resource2NoImageData.textColor"
         >
-          <p>{{ resource2NoImageData.topText }}</p>
-          <p>{{ resource2NoImageData.bottomText | truncate: [20] }}</p>
+          <p>{{ resource2NoImageData.topText | truncate: [20] }}</p>
         </div>
       </div>
     </div>
@@ -62,8 +61,7 @@
           class="text-container-block"
           [style.color]="resource3NoImageData.textColor"
         >
-          <p>{{ resource3NoImageData.topText }}</p>
-          <p>{{ resource3NoImageData.bottomText | truncate: [20] }}</p>
+          <p>{{ resource3NoImageData.topText | truncate: [20] }}</p>
         </div>
       </div>
     </div>
@@ -80,8 +78,7 @@
           class="text-container-block"
           [style.color]="resource4NoImageData.textColor"
         >
-          <p>{{ resource4NoImageData.topText }}</p>
-          <p>{{ resource4NoImageData.bottomText | truncate: [20] }}</p>
+          <p>{{ resource4NoImageData.topText | truncate: [20] }}</p>
         </div>
       </div>
     </div>
