--- a/src/app/components/collection/collection.component.scss
+++ b/src/app/components/collection/collection.component.scss
@@ -20,6 +20,7 @@ $block-border: 5px solid white;
     font-family: "Bree Serif", serif;
     margin: 0;
     text-align: center;
+    text-overflow: ellipsis;
   }
 }
 
