--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,3 +3,5 @@
 <app-change-password></app-change-password>
 <!-- * Delete Account -->
 <app-delete-account></app-delete-account>
+<!-- * Change Theme -->
+<app-change-theme></app-change-theme>
