working on dark theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@
 @import "./assets/styles/no-auth-layout.scss";
 @import "./assets/styles/section-container.scss";
 @import "./assets/styles/resource-grid.scss";
+@import "./assets/styles/colors";
+@import "./assets/styles/theme";
 
 .box-shadow {
   -webkit-box-shadow: 0px 10px 26px -6px rgba(0, 0, 0, 0.2);
