--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -33,8 +33,8 @@
 	margin-right: auto;
 	margin-bottom: 25px;
 	max-width: 600px;
-	background-color: white;
-	box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
+	background-color: var(--post-background-color);
+	box-shadow: var(--post-box-shadow);
 	animation: fadeUp 0.2s ease-in-out;
 	animation-fill-mode: forwards;
 
