--- a/src/assets/styles/section-container.scss
+++ b/src/assets/styles/section-container.scss
@@ -3,8 +3,8 @@
   .section {
     margin-top: 15px;
     border-radius: 5px;
-    box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
-    background-color: #ffffff;
+    box-shadow: var(--section-box-shadow);
+    background-color: var(--section-color);
     padding: 2px 15px 15px 15px;
     max-width: 600px;
     margin-left: auto;
