--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -12,7 +12,7 @@ $image-height: 38px;
 
   .form {
     width: 100%;
-    background-color: #f6f8fa;
+    background-color: var(--search-background-color);
     border: 2px solid transparent;
     border-radius: 25px;
     display: grid;
@@ -22,13 +22,13 @@ $image-height: 38px;
     transition: border 0.2s ease-in-out;
 
     &:focus-within {
-      border: 2px solid rgba(72, 26, 137, 0.5);
+      border: var(--search-form-focus-within);
     }
 
     .search-icon {
       align-self: center;
       fa-icon {
-        color: #481a89;
+        color: var(--search-search-icon-color);
         font-size: 16px;
       }
     }
@@ -40,6 +40,7 @@ $image-height: 38px;
         background-color: transparent;
         border: none;
         font-size: 15px;
+        color: var(--search-form-input-color);
         &:focus {
           outline: 0;
           border: 0;
@@ -50,8 +51,8 @@ $image-height: 38px;
 
   .search-result {
     @extend %fixed-abs;
-    background-color: white;
-    box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
+    background-color: var(--search-result-background-color);
+    box-shadow: var(--search-result-box-shadow);
     border-radius: 5px;
     animation: appear 0.2s ease-in;
     animation-fill-mode: forwards;
@@ -69,7 +70,8 @@ $image-height: 38px;
       h3 {
         padding: 10px 15px;
         font-size: 14px;
-        border-bottom: 1px solid #dee8ff;
+        font-family: "Montserrat", sans-serif;
+        border-bottom: var(--search-result-box-section-border);
         margin-bottom: 5px;
       }
 
@@ -88,7 +90,7 @@ $image-height: 38px;
         }
 
         &:hover {
-          background-color: rgba(0, 0, 0, 0.1);
+          background-color: var(--search-result-item-hover);
         }
 
         .item-a {
@@ -141,15 +143,16 @@ $image-height: 38px;
 
       .see-more {
         font-family: 'Montserrat', sans-serif;
-        color: #481A89;
+        color: var(--search-result-see-more);
 
         span:nth-of-type(1) {
           margin-right: 10px;
         }
 
         span:nth-of-type(2) {
-          background-color: #DEE8FF;
+          background-color: var(--search-result-see-more-bubble);
           border-radius: 25px;
+          color: var(--search-result-see-more-text-color);
           font-size: 10px;
           font-weight: bold;
           padding: 2px 12px;
